# super

./: .dockerignore  .env.example  .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  install.sh
.cursor/rules/: oss-docs-no-pro-secrets.mdc
.github/ISSUE_TEMPLATE/: pro-trial.yml
.github/scripts/: fetch-verifying-keys.sh  package-release-unix.sh  write-release-readme.sh
.github/workflows/: ci.yml  deploy-docs.yml  docker-publish.yml  release.yml
benchmark/: Cargo.toml  README.md  benchmark_all.sh  benchmark_super.sh  internal_stress.sh
benchmark/analysis/: plot.py
benchmark/generator/: Cargo.toml
benchmark/generator/src/: main.rs
benchmark/payloads/: Cargo.toml
benchmark/payloads/src/: main.rs
benchmark/runner/: Cargo.toml
benchmark/runner/src/: main.rs
cli/: Cargo.toml
cli/src/: args.rs  check.rs  client.rs  config.rs  display.rs  doctor.rs  handlers.rs  main.rs  session.rs  top.rs
common/: Cargo.toml  build.rs
common/keys/: public.key  super-pro.k_0ac64a3f.public.key
common/src/: auth.rs  config.rs  lib.rs  license.rs  paths.rs  plugin_abi.rs  plugin_async.rs  plugin_error.rs  plugin_http_abi.rs  plugin_ui_abi.rs  resources.rs  security.rs
common/src/license/: claims.rs  mod.rs  verify.rs
core/: Cargo.toml
core/src/: api.rs  artifact.rs  client.rs  event_hooks.rs  health.rs  hooks.rs  lib.rs  logger.rs  monitor.rs  process.rs  scheduler.rs  store.rs
core/src/extension/: mod.rs  stack.rs
core/src/manager/: command.rs  controller.rs  mod.rs  registry.rs  tracker.rs
core/src/plugin/: abi.rs  adapter.rs  host.rs  http_host.rs  loader.rs  mod.rs  ui_host.rs
core/tests/: autorestart_test.rs  config_test.rs  event_hooks_test.rs  health_test.rs  hooks_test.rs  init_test_data.sh  logs_test.rs  manager_test.rs  ota_test.rs  registry_test.rs  resiliency_test.rs  scheduler_test.rs  stopsecs_test.rs  store_test.rs  tracker_test.rs
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: main.ts  style.css
dashboard/src/api/: client.ts  paths.ts
dashboard/src/components/: ActionButtons.vue  BasePagination.vue  EmptyProgramsState.vue  LogTerminal.vue  ProcessDetailDrawer.vue  StatCard.vue  StatusBadge.vue  SystemMetricsPanel.vue
dashboard/src/extensions/: AppFooter.vue  NavbarRight.vue
dashboard/src/layout/: MainLayout.vue
dashboard/src/router/: index.ts
dashboard/src/stores/: program.ts  settings.ts
dashboard/src/types/: index.ts
dashboard/src/views/: ErrorPage.vue  ProcessList.vue
dockerbuild/: Dockerfile  README.md
dockerbuild/conf/: super.subscription.example.toml  super.toml
dockerbuild/conf/conf.d/: example-stack.json.example
docs/: gh-pages-README.md  hugo.yaml  ref.txt
docs/assets/css/: custom.css  docs-home.css
docs/content/: _index.es.md  _index.ja.md  _index.md  _index.ru.md  _index.zh-cn.md
docs/content/docs/: _index.md
docs/content/docs/01-getting-started/: _index.md  installation.md  quick-start.md
docs/content/docs/02-essentials/: _index.md  configuration.md  environment-secrets.md  logging.md  process-control.md  process-management-contract.md  scheduled-tasks.md  web-ui.md
docs/content/docs/03-orchestration/: _index.md  dependencies.md  event-hooks.md  health-checks.md  lifecycle-hooks.md  ota-updates.md  system-events.md
docs/content/docs/04-production-scenarios/: _index.md
docs/content/docs/04-production-scenarios/delivery/: _index.md  declarative-stack.md  fail-safe-ota.md
docs/content/docs/04-production-scenarios/extensibility/: _index.md  custom-extensions.md
docs/content/docs/04-production-scenarios/migrations/: _index.md  vs-pm2.md  vs-supervisor.md
docs/content/docs/04-production-scenarios/observability/: _index.md  instant-metrics.md  programmatic-control.md
docs/content/docs/05-advanced-management/: _index.md  access-control.md  authentication.md  event-notifications.md  operation-audit.md  resource-isolation.md  web-ui.md
docs/content/docs/06-internals/: _index.md  api-reference.md  cli-reference.md  config-reference.md  design-philosophy.md  faq.md  oss-boundary.md
docs/content/docs/07-editions/: _index.md  feature-matrix.md
docs/content/docs/08-changelog/: _index.md
docs/content/go/: pro.md
docs/content/legal/: _index.md  privacy.md  terms.md
docs/i18n/: en.yaml  es.yaml  ja.yaml  ru.yaml  zh-cn.yaml
docs/layouts/: home.html
docs/layouts/_partials/: navbar-link.html  sidebar.html
docs/layouts/_partials/custom/: footer.html
docs/layouts/partials/: footer.html
docs/layouts/partials/home-premium/: en.html  es.html  ja.html  ru.html  zh-cn.html
docs/layouts/shortcodes/: badge.html  home-premium.html  purchase-cta.html  ui-screenshot.html
docs/static/css/: docs-home.css
example/conf/: super.toml
example/conf/conf.d/: extra-services.json
example/resource/: stack_all.json  stack_cgroup.json  stack_cron.json  stack_depends_on.json  stack_env.json  stack_hooks.json  zombie.sh
example/scripts/: demo_listener.py  slack_bot.py
superd/: Cargo.toml
superd/src/: main.rs
(+4 files in other folders)
