[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
utoipa = { version = "5.3", features = ["uuid", "chrono", "preserve_order"] }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "sync"] }
