[package]
name = "super-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["docs"]
docs = []

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["full", "test-util"]}
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }

sha2 = "0.10"
hex = "0.4"
tempfile = "3.8"
hostname = "0.3"
sysinfo = "0.37"
glob = "0.3"
cron = "0.15"
futures-util = "0.3"
libloading = "0.8"
libc = "0.2"

dotenvy = "0.15"

# OpenAPI doc generation
utoipa = { version = "5.3", features = ["axum_extras", "uuid", "chrono"] }
# Swagger UI integration
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3.8"
anyhow = "1.0"
wiremock = "0.5"
common = { path = "../common" }
