[package]
name = "superd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "superd"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
super-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

rust-embed = { version = "8.11", optional = true }
mime_guess = { version = "2.0", optional = true }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[features]
default = ["web-ui"]
web-ui = ["dep:rust-embed", "dep:mime_guess"]
