[package]
name = "superd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "superd"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
super-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
bytes = "1"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
